Closed Bug 1447141 Opened 7 years ago Closed 7 years ago

Crash in atidxx64.dll | NdrpAsyncAbortCall

Categories

(Core :: Graphics, defect, P3)

60 Branch
x86_64
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- fixed
firefox59 --- unaffected
firefox60 --- fixed
firefox61 --- fixed

People

(Reporter: philipp, Assigned: bas.schouten)

Details

(Keywords: crash, regression, Whiteboard: [gfx-noted])

Crash Data

Attachments

(2 files)

This bug was filed from the Socorro interface and is report bp-4cc8dca7-401e-4102-8e86-2bd010180319. ============================================================= content crashes with this signature are regressing in the 60.0b cycle from users on windows 7. this seems to be constrained to a number of device/driver configurations. would there a way to blocklist them or should we reach out to amd? Adapter driver version facet 1 15.201.2201.0 130 64.36 % 2 15.201.1701.0 71 35.15 % Adapter device id facet 1 0x9996 95 47.03 % 2 0x9991 59 29.21 % 3 0x9993 27 13.37 % 4 0x9998 19 9.41 % 5 0x9901 1 0.50 % 6 0x990b 1 0.50 %
Flags: needinfo?(milan)
Whiteboard: [gfx-noted]
These all have "Crash during D3D11 device creation" message (https://dxr.mozilla.org/mozilla-central/source/gfx/thebes/DeviceManagerDx.cpp#338) before the crash. We're failing to create D3D11 device with D3D11_CREATE_DEVICE_VIDEO_SUPPORT, then also without that flag. The numbers are not horribly high, but maybe it is worth a blocklist? Bas, thoughts?
Flags: needinfo?(milan) → needinfo?(bas)
(In reply to Milan Sreckovic [:milan] from comment #1) > These all have "Crash during D3D11 device creation" message > (https://dxr.mozilla.org/mozilla-central/source/gfx/thebes/DeviceManagerDx. > cpp#338) before the crash. > We're failing to create D3D11 device with D3D11_CREATE_DEVICE_VIDEO_SUPPORT, > then also without that flag. > The numbers are not horribly high, but maybe it is worth a blocklist? > > Bas, thoughts? This is a fairly old driver, however I'm not sure how common it is, the gfx telemetry dashboard is down. Having said that, this is Windows 7 only, I don't think a blacklist entry could hurt.
Flags: needinfo?(bas)
https://dvander.github.io/moz-gfx-telemetry/#view=hwsearch 0x9996 are 0.01% of the pings, and subset of those with 15.201.2201.0 driver are a total of 0.005%.
Who would set up the black list?
Flags: needinfo?(bas)
I can do that.
Assignee: nobody → bas
Status: NEW → ASSIGNED
Flags: needinfo?(bas)
Comment on attachment 8966623 [details] Bug 1447141: Correct Vendor ID for old radeon devie blacklist. https://reviewboard.mozilla.org/r/235334/#review241480
Attachment #8966623 - Flags: review?(milan) → review+
Pushed by bschouten@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/589b2f6085ba Blacklist all acceleration on a small subset of AMD device/driver combinations that show up in content crashes. r=milan
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
thanks, can you please request uplift to beta on occasion?
Flags: needinfo?(bas)
Comment on attachment 8966623 [details] Bug 1447141: Correct Vendor ID for old radeon devie blacklist. Approval Request Comment [Feature/Bug causing the regression]: Unknown [User impact if declined]: Content process crashes [Is this code covered by automated tests?]: Yes [Has the fix been verified in Nightly?]: Yes [Needs manual test from QE? If yes, steps to reproduce]: No [List of other uplifts needed for the feature/fix]: None [Is the change risky?]: No [Why is the change risky/not risky?]: Just some small subset of people will lose acceleration [String changes made/needed]: None
Flags: needinfo?(bas)
Attachment #8966623 - Flags: approval-mozilla-beta?
Comment on attachment 8966623 [details] Bug 1447141: Correct Vendor ID for old radeon devie blacklist. Low-risk fix for a new crash on 60. Approved for 60.0b13.
Attachment #8966623 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
the crashes are continuing on 60.0b13 from device ids which are on the blacklist.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
how should we proceed with this crash?
Flags: needinfo?(bas)
I don't know much about how our blacklisting code works.. Milan, any suggestions of why this could be?
Flags: needinfo?(bas) → needinfo?(milan)
These are old cards, so we need to use VendorATI, rather than VendorAMD. My bad on not catching that in the review.
Flags: needinfo?(milan) → needinfo?(bas)
Pushed by bschouten@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/1bc26646a588 Addition: Correct Vendor ID for old radeon device blacklist. r=milan
Status: REOPENED → RESOLVED
Closed: 7 years ago7 years ago
Resolution: --- → FIXED
Flags: needinfo?(bas)
Bas, can you please attach that follow-up patch to the bug and request mozilla-release approval on it for 60?
Flags: needinfo?(bas)
Approval Request Comment [Feature/Bug causing the regression]: Same as before [User impact if declined]: Previous fix didn't work [Is this code covered by automated tests?]: No [Has the fix been verified in Nightly?]: Yes [Needs manual test from QE? If yes, steps to reproduce]: No [List of other uplifts needed for the feature/fix]: No [Is the change risky?]: No [Why is the change risky/not risky?]: Corrects blacklist [String changes made/needed]: None
Flags: needinfo?(bas)
Attachment #8972388 - Flags: review+
Attachment #8972388 - Flags: approval-mozilla-beta?
Attachment #8972388 - Attachment is patch: true
Comment on attachment 8972388 [details] [diff] [review] Bug 1447141 - Correction: Correct Vendor ID for old radeon devie blacklist. Thanks, Bas :)
Attachment #8972388 - Flags: approval-mozilla-beta? → approval-mozilla-release?
Comment on attachment 8972388 [details] [diff] [review] Bug 1447141 - Correction: Correct Vendor ID for old radeon devie blacklist. gfx blocklist fix for 60
Attachment #8972388 - Flags: approval-mozilla-release?
Attachment #8972388 - Flags: approval-mozilla-release+
Attachment #8972388 - Flags: approval-mozilla-esr60+
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: