Bug 1447141 - Blacklist all acceleration on a small subset of AMD device/driver combinations that show up in content crashes. r=milan, a=RyanVM

MozReview-Commit-ID: FTBPGRTdmUG

--HG--
extra : source : 589b2f6085ba15793ad9a0892e6e30277d77cb83